--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>atividade flexbox</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-<link rel="shortcut icon" href="china.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="china.ico" type="image/x-icon">
 </head>
+
 <body>
-    
+    <h1 class="titulo-pagina">propriedades flexbox</h1>
+
+    <hr>
+
+    <h1 class="nomeDaPropriedade">1- display: ativa o flexbox</h1>
+    <hr>
+    <h1 class="velorDaPropriedade">2- flex-direction: define a direcao do eixo </h1>
+    <hr>
+    <h2>flex-direction: row</h2>
+    <main class="container-row">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2>flex-direction: column</h2>
+    <main class="container-column">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+        <h2>flex-direction: row-reverse</h2>
+        <main class="container-row-reverse">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2>flex-direction: column-reverse</h2>
+        <main class="container-columnreverse">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
 </body>
+
 </html>
