--- a/index.html
+++ b/index.html
@@ -16,35 +16,190 @@
 
     <h1 class="nomeDaPropriedade">1- display: ativa o flexbox</h1>
     <hr>
-    <h1 class="velorDaPropriedade">2- flex-direction: define a direcao do eixo </h1>
+    <h1 class="nomeDaPropriedade">2- flex-direction: define a direcao do eixo </h1>
     <hr>
-    <h2>flex-direction: row</h2>
+    <h2 class="valorDaPropriedade">flex-direction: row</h2>
     <main class="container-row">
         <div class="bloco-1"> 1 </div>
         <div class="bloco-2"> 2 </div>
         <div class="bloco-3"> 3 </div>
     </main>
 
-    <h2>flex-direction: column</h2>
+    <h2 class="valorDaPropriedade">flex-direction: column</h2>
     <main class="container-column">
         <div class="bloco-1"> 1 </div>
         <div class="bloco-2"> 2 </div>
         <div class="bloco-3"> 3 </div>
     </main>
 
-        <h2>flex-direction: row-reverse</h2>
+        <h2 class="valorDaPropriedade">flex-direction: row-reverse</h2>
         <main class="container-row-reverse">
             <div class="bloco-1"> 1 </div>
             <div class="bloco-2"> 2 </div>
             <div class="bloco-3"> 3 </div>
         </main>
 
-        <h2>flex-direction: column-reverse</h2>
+    
+        <h2 class="valorDaPropriedade">flex-direction: row-reverse</h2>
         <main class="container-columnreverse">
             <div class="bloco-1"> 1 </div>
             <div class="bloco-2"> 2 </div>
             <div class="bloco-3"> 3 </div>
         </main>
-</body>
+
+        <h1 class="nomeDaPropriedade">3- justify-content-center</h1>
+
+        <h2 class="valorDaPropriedade">justify-content-center</h2>
+        <main class="justify-content-center">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2 class="valorDaPropriedade">justify-content-flex-start</h2>
+        <main class="justify-content-flex-start">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+
+        <h2 class="valorDaPropriedade">justify-content-flex-end</h2>
+        <main class="justify-content-flex-end">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+
+        <h2 class="valorDaPropriedade">space Between</h2>
+        <main class="spaceBetween">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2 class="valorDaPropriedade">space Around</h2>
+        <main class="spaceAround">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2 class="valorDaPropriedade">space Evenly</h2>
+        <main class="spaceEvenly">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        
+        <h1 class="nomeDaPropriedade">4- align items: alinhar os elementos no eixo perpendicular/secumdarios</h1>
+
+        <h2 class="valorDaPropriedade">alignItems-center</h2>
+        <main class="containerAlignItemsCenter">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2 class="valorDaPropriedade">alignItems-flexStart</h2>
+        <main class="containerAlignItemsflexStart">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2 class="valorDaPropriedade">alignItems-flexEnd</h2>
+        <main class="containerAlignItemsflexEnd">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+        </main>
+
+        <h2 class="valorDaPropriedade">alignItems-stretch</h2>
+        <main class="containerAlignItemsStretch">
+            <div class="bloco1SemAltura"> 1 </div>
+            <div class="bloco2SemAltura"> 2 </div>
+            <div class="bloco3SemAltura"> 3 </div>
+        </main>
+
+
+        <h2 class="valorDaPropriedade">alignItems-baseline</h2>
+        <main class="containerAlignItemsBaseline">
+            <div class="bloco1FontesDiferentes"> 1 </div>
+            <div class="bloco2FontesDiferentes"> 2 </div>
+            <div class="bloco3FontesDiferentes"> 3 </div>
+        </main>
+
+
+        <h1 class="nomeDaPropriedade">5- flex-wrap- serve para decidir se os elementos irao para a linha de baixo quando chegar ao final do container os se eles ficaram espremidos</h1>
+
+        <h2 class="valorDaPropriedade">flex-wrap</h2>
+        <main class="containerflexWrapNowrap">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">flex-wrap</h2>
+        <main class="containerflexWrapWrap">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">flex-wrap</h2>
+        <main class="containerflexWrapReverse">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h1 class="nomeDaPropriedade">6- flex-flow (shorthand) atalho para flex-direction e flex wrap</h1>
+
+        <h2 class="valorDaPropriedade">flexFlow</h2>
+        <main class="containerflexFlowRowRap">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+    </body>
 
 </html>
