--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>atividade flexbox</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="shortcut icon" href="china.ico" type="image/x-icon">
+
+    <nav>
+  <ul class="menu">
+<li> <a href="#display">display</a></li> 
+<li><a href="#aling items">aling items</a></li>
+<li><a href="#flex direction">flex direction</a></li>
+<li><a href="#justify content">justify content</a></li>
+<li><a href="#flex wrap">flex wrap</a></li>
+<li><a href="#flex flow">flex-flow</a></li>
+<li><a href="#aling content"> aling content</a></li>
+</ul>
+    </nav>
 </head>
 
 <body>
@@ -14,9 +26,9 @@
 
     <hr>
 
-    <h1 class="nomeDaPropriedade">1- display: ativa o flexbox</h1>
+    <h1 class="nomeDaPropriedade" id="display">1- id=display: ativa o flexbox</h1>
     <hr>
-    <h1 class="nomeDaPropriedade">2- flex-direction: define a direcao do eixo </h1>
+    <h1 class="nomeDaPropriedade" id="flex direction">2- id= flex direction: define a direcao do eixo </h1>
     <hr>
     <h2 class="valorDaPropriedade">flex-direction: row</h2>
     <main class="container-row">
@@ -47,8 +59,8 @@
             <div class="bloco-3"> 3 </div>
         </main>
 
-        <h1 class="nomeDaPropriedade">3- justify-content-center</h1>
-
+        <h1 class="nomeDaPropriedade" id="justify content">3- id= justify content </h1>
+ 
         <h2 class="valorDaPropriedade">justify-content-center</h2>
         <main class="justify-content-center">
             <div class="bloco-1"> 1 </div>
@@ -94,7 +106,7 @@
         </main>
 
         
-        <h1 class="nomeDaPropriedade">4- align items: alinhar os elementos no eixo perpendicular/secumdarios</h1>
+        <h1 class="nomeDaPropriedade" id="aling items">4- id= align items: alinhar os elementos no eixo perpendicular/secumdarios</h1>
 
         <h2 class="valorDaPropriedade">alignItems-center</h2>
         <main class="containerAlignItemsCenter">
@@ -133,7 +145,8 @@
         </main>
 
 
-        <h1 class="nomeDaPropriedade">5- flex-wrap- serve para decidir se os elementos irao para a linha de baixo quando chegar ao final do container os se eles ficaram espremidos</h1>
+        <h1 class="nomeDaPropriedade" id="flex wrap">5-
+            id= flex wrap- serve para decidir se os elementos irao para a linha de baixo quando chegar ao final do container os se eles ficaram espremidos</h1>
 
         <h2 class="valorDaPropriedade">flex-wrap</h2>
         <main class="containerflexWrapNowrap">
@@ -183,10 +196,108 @@
             <div class="bloco-3"> 12</div>
         </main>
 
-        <h1 class="nomeDaPropriedade">6- flex-flow (shorthand) atalho para flex-direction e flex wrap</h1>
+        <h1 class="nomeDaPropriedade" id="flex flow">6- id= flex flow (shorthand) atalho para flex-direction e flex wrap</h1>
 
         <h2 class="valorDaPropriedade">flexFlow</h2>
         <main class="containerflexFlowRowRap">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h1 class="nomeDaPropriedade" id="aling content">7- id= aling content: quando houver quebra de linha(flexwrap) e nos queremos alinhar os elementos no eixo perpendiculoar/secundario</h1>
+
+        <h2 class="valorDaPropriedade">aling-content: center</h2>
+        <main class="containerAlingContentCenter">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">aling-content: flex-start</h2>
+        <main class="containerAlingContentFlexStart">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">aling-content: flex-end</h2>
+        <main class="containerAlingContentFlexEnd">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">aling-content: spaceBetween</h2>
+        <main class="containerAlingContentspaceBetween">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">aling-content: spaceAround</h2>
+        <main class="containerAlingContentspaceAround">
+            <div class="bloco-1"> 1 </div>
+            <div class="bloco-2"> 2 </div>
+            <div class="bloco-3"> 3 </div>
+            <div class="bloco-1"> 4 </div>
+            <div class="bloco-2"> 5 </div>
+            <div class="bloco-3"> 6 </div>
+            <div class="bloco-1"> 7 </div>
+            <div class="bloco-2"> 8 </div>
+            <div class="bloco-3"> 9 </div>
+            <div class="bloco-1"> 10 </div>
+            <div class="bloco-2"> 11</div>
+            <div class="bloco-3"> 12</div>
+        </main>
+
+        <h2 class="valorDaPropriedade">aling-content: spaceEvenly</h2>
+        <main class="containerAlingContentspaceEvenly">
             <div class="bloco-1"> 1 </div>
             <div class="bloco-2"> 2 </div>
             <div class="bloco-3"> 3 </div>
